Fix Android Studio integration test